tests/snapshots/cli_parse__parse_config_commands_save_no_overwrite.snap
---
source: tests/cli_parse.rs
expression: "&opt"
---
{
  "command": {
    "Config": {
      "command": {
        "Save": {
          "overwrite": false,
          "path": "/path/to/config.toml"
        }
      }
    }
  },
  "raw_config": {
    "psono_settings": {
      "api_key_id": "00000000-0000-0000-0000-000000000000",
      "api_secret_key_hex": "0000000000000000000000000000000000000000000000000000000000000000",
      "server_url": "https://psono.pw/server"
    },
    "http_options": {
      "timeout": 60,
      "max_redirects": 0,
      "use_native_tls": false,
      "danger_disable_tls_verification": false,
      "der_root_certificate_path": null,
      "pem_root_certificate_path": null
    },
    "config_packed": null,
    "config_path": null
  }
}
