tests/snapshots/cli_parse__parse_config_save.snap
---
source: tests/cli_parse.rs
expression: "OptView::from(&opt)"
---
{
  "command": {
    "command": "config"
  },
  "api_key_id": "00000000-0000-0000-0000-000000000000",
  "api_secret_key_hex": "0000000000000000000000000000000000000000000000000000000000000000",
  "server_url": "https://psono.pw/server"
}
